--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1388,10 +1388,27 @@ interface AudioBuffer {
         </dl>
         <br>
         <h3>1.4.4. AudioBufferOptions</h3>
-        <p>추후 번역</p>
+        <p>이는 AudioBuffer를 생성할 때 사용할 옵션을 명시합니다. length와 sampleRate 멤버가 요구됩니다.</p>
+        <pre>
+dictionary AudioBufferOptions {
+  unsigned long numberOfChannels = 1;
+  required unsigned long length;
+  required float sampleRate;
+};
+        </pre>
         <br>
         <h4>1.4.4.1. 딕셔너리 AudioBufferOptions 멤버</h4>
-        <p>추후 번역</p>
+        <p>이 딕셔너리의 멤버들의 허용되는 값은 제한되어 있습니다. createBuffer()를 참고하십시오.</p>
+        <dl>
+          <dt><i>length</i> / 자료형: unsigned long</dt>
+          <dd>버퍼의 샘플 프레임의 길이. 제약 사항에 대해서는 length를 참고하십시오.</dd>
+          <br>
+          <dt><i>numberOfChannels</i> / 자료형: unsigned long / 기본값: 1</dt>
+          <dd>버퍼의 채널의 수. 제약 사항에 대해서는 numberOfChannels를 참고하십시오.</dd>
+          <br>
+          <dt><i>sampleRate</i> / 자료형: float</dt>
+          <dd>버퍼의 샘플 레이트 (단위: Hz). 제약 사항에 대해서는 sampleRate를 참고하십시오.</dd>
+        </dl>
         <br>
         <h2>1.5. AudioNode 인터페이스</h2>
         <p>AudioNode는 AudioContext의 구성 요소입니다. 이 인터페이스는 오디오 소스, 오디오 목적지, 중간 프로세싱 모듈을 나타냅니다. 이 모듈들은 오디오를 렌더링하여 오디오 하드웨어로 보내는 프로세싱 그래프를 형성하기 위해 함께 연결될 수 있습니다. 각 노드들은 입력 그리고/또는 출력을 가질 수 있습니다. 소스 노드는 입력이 없고 하나의 출력이 있습니다. 필터와 같은 대부분의 프로세싱 노드들은 하나의 입력과 하나의 출력을 갖습니다. 각 유형의 AudioNode는 어떻게 이것이 오디오를 처리하거나 합성하는지에 대한 세부 사항이 다릅니다. 하지만, 일반적으로, AudioNode는 (입력이 있다면) 입력을 처리하고, (출력이 있다면) 출력으로 오디오를 생성합니다.</p>
@@ -1432,9 +1449,9 @@ interface AudioNode : EventTarget {
         </pre>
         <br>
         <h3>1.5.1. AudioNode 생성</h3>
-        <p>AudioNode는 두 가지 방법으로 생성될 수 있는데 그 방법이란 특정한 인터페이스에 대한 생성자를 사용하는 것 혹은 BaseAudioContext 또는 AudioContext의 팩토리 메서드를 사용하는 것입니다.</p>
+        <p>AudioNode는 두 가지 방법으로 생성될 수 있는데 그 방법이란 특정한 인터페이스에 대한 생성자를 사용하는 것 혹은 BaseAudioContext 또는 AudioContext의 <strong>팩토리 메서드</strong>를 사용하는 것입니다.</p>
         <br>
-        <p>AudioNode의 생성자의 첫번째 인자로써 전달되는 BaseAudioContext는 생성될 AudioNode의 연관된 BaseAudioContext라고 불려집니다. 유사하게, 팩토리 메서드를 사용할 때, AudioNode의 연관된 BaseAudioContext는 이 팩토리 메서드가 호출된 BaseAudioContext입니다.</p>
+        <p>AudioNode의 생성자의 첫번째 인자로써 전달되는 BaseAudioContext는 생성될 AudioNode의 <strong>연관된 BaseAudioContext</strong>라고 불려집니다. 유사하게, 팩토리 메서드를 사용할 때, AudioNode의 연관된 BaseAudioContext는 이 팩토리 메서드가 호출된 BaseAudioContext입니다.</p>
         <br>
         <p>추후 번역</p>
         <br>
