--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -1884,10 +1884,26 @@ nodeA.connect(param);
         </dl>
         <br>
         <h3>1.5.6. AudioNodeOptions</h3>
-        <p>추후 번역</p>
+        <p>이는 모든 AudioNode를 생성할 때 사용될 수 있는 옵션을 명시합니다. 모든 멤버는 선택적입니다. 그러나, 각 노드에 사용되는 특정한 값은 실제 노드에 따라 다릅니다.</p>
+        <pre>
+dictionary AudioNodeOptions {
+  unsigned long channelCount;
+  ChannelCountMode channelCountMode;
+  ChannelInterpretation channelInterpretation;
+};
+        </pre>
         <br>
         <h4>1.5.6.1. 딕셔너리 AudioNodeOptions 멤버</h4>
-        <p>추후 번역</p>
+        <dl>
+          <dt><i>channelCount</i> / 자료형: unsigned long</dt>
+          <dd>channelCount 어트리뷰트에 대해 원하는 채널의 수</dd>
+          <br>
+          <dt><i>channelCountMode</i> / 자료형: ChannelCountMode</dt>
+          <dd>channelContMode 어트리뷰트에 대해 원하는 모드</dd>
+          <br>
+          <dt><i>channelInterpretation</i> / 자료형: ChannelInterpretation</dt>
+          <dd>channelInterpretation 어트리뷰트에 대해 원하는 모드</dd>
+        </dl>
         <br>
         <h2>1.6. AudioParam 인터페이스</h2>
         <p>AudioParam은 AudioNode의 기능의 개별적 측면을 제어하는데, 예를 들자면 음량이 있습니다. 이 파라미터는 value 어트리뷰트를 사용하여 특정한 값으로 즉시 설정될 수 있습니다. 또는, 값은 아주 정밀한 시간에 (AudioContext의 currentTime 어트리뷰트의 좌표계에서) 발생하도록 예정될 수도 있는데, 엔벨로프, 볼륨 페이드, LFO, filter sweep, grain window 등이 그 예입니다. 이 방법으로, 임의적인 타임라인 기반의 자동화 곡선이 모든 AudioParam에 대해서 설정될 수 있습니다. 추가적으로, AudioNode의 출력으로부터의 오디오 신호는 AudioParam에 연결될 수 있고 고유 파라미터 값으로 평가됩니다.</p>
@@ -1903,6 +1919,7 @@ nodeA.connect(param);
         <p>많은 AudioParam의 경우 minValue와 maxValue는 최대로 가능한 범위로 설정되는 것이 의도됩니다. 이 경우, maxValue는 <strong><i>most-positive-single-float</i></strong> 값으로 설정되어야 하는데, 이 값은 3.4028235e38입니다. (그러나, 오직 IEEE-754 double precision float value만을 지원하는 JavaScript에서는, 이것은 반드시 3.4028234663852886e38로 작성되어야만 합니다.) 유사하게, minValue는 <strong><i>most-negative-single-float</i></strong>로 설정되어야 하고, 이 값은 -3.4028235e38입니다. (유사하게, 이것은 반드시 JavaScript에서 -3.4028234663852886e38로 작성되어야만 합니다.)</p>
         <br>
         <p>AudioParam은 0개 이상의 <strong>자동화 이벤트</strong>를 유지합니다. 각 자동화 이벤트는, AudioContext의 currentTime 어트리뷰트의 시간 좌표계의 <strong>자동화 이벤트 시간</strong>에 관련하여, 특정한 시간 범위에 대한 파라미터의 값 변화를 명시합니다. 자동화 이벤트의 리스트는 자동화 이벤트 시간의 오름차순으로 유지됩니다.</p>
+        <br>
         <p>주어진 자동화 이벤트의 행동은 이 이벤트의 자동화 이벤트 시간과 리스트의 인접한 이벤트의 자동화 이벤트 뿐만이 아니라, AudioContext의 현재 시간의 함수입니다. 다음의 <strong>자동화 메서드</strong>들은 이벤트 리스트에 메서드에 따른 새로운 이벤트를 추가함으로써 이벤트 리스트를 변경시킵니다.</p>
         <ul>
           <li>setValueAtTime() - setValue</li>
@@ -1926,8 +1943,52 @@ nodeA.connect(param);
         <br>
         <p>AudioParam의 automation rate는 다음의 값 중 하나와 함께 automationRate 어트리뷰트를 설정함으로써 선택될 수 있습니다. 그러나, 몇몇 AudioParam은 automation rate가 변경될 수 있는지에 대한 제약을 가지고 있습니다.</p>
         <br>
-        <p>추후 번역</p>
+        <pre>
+enum AutomationRate {
+  "a-rate",
+  "k-rate"
+};
+        </pre>
         <br>
+        <table>
+          <thead>
+            <tr>
+              <th colspan="2">열거형 설명</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>"<i>a-rate</i>"</td>
+              <td>이 AudioParam이 a-rate 프로세싱으로 설정됩니다.</td>
+            </tr>
+            <tr>
+              <td>"<i>k-rate</i>"</td>
+              <td>이 AudioParam이 k-rate 프로세싱으로 설정됩니다.</td>
+            </tr>
+          </tbody>
+        </table>
+        <br>
+        <p>각 AudioParam은 내부 슬롯 [[current value]]를 가지고 있으며, 초기적으로 AudioParam의 defaultValue로 설정되어 있습니다.</p>
+        <br>
+        <pre>
+[Exposed=Window]
+interface AudioParam {
+  attribute float value;
+  attribute AutomationRate automationRate;
+  readonly attribute float defaultValue;
+  readonly attribute float minValue;
+  readonly attribute float maxValue;
+  AudioParam setValueAtTime (float value, double startTime);
+  AudioParam linearRampToValueAtTime (float value, double endTime);
+  AudioParam exponentialRampToValueAtTime (float value, double endTime);
+  AudioParam setTargetAtTime (float target, double startTime, float timeConstant);
+  AudioParam setValueCurveAtTime (sequence<float> values,
+                                  double startTime,
+                                  double duration);
+  AudioParam cancelScheduledValues (double cancelTime);
+  AudioParam cancelAndHoldAtTime (double cancelTime);
+};
+        </pre>
         <h3>1.6.1. 어트리뷰트</h3>
         <h3>1.6.2. 메서드</h3>
         <h3>1.6.3. 값의 계산</h3>
